# xenum

./: .gitignore  CHANGELOG.md  README.md
xenum/lib/: CMakeLists.txt  doc.xenum.hpp
xenum/lib/inc/xenum3/: Xenum.hpp  XenumSet.hpp
xenum/lib/inc/xenum3/impl/: Cstring.hpp  CstringDeclCntnr.hpp  CstringDeclValue.hpp  CstringDefine.hpp  Ctxt.hpp  Decl.hpp  DeclareCntnr.hpp  DeclareCntnrProps.hpp  DeclareValue.hpp  DefineCntnr.hpp  DefineCntnrProps.hpp  IndexNode.hpp  Main.hpp  Plain.hpp  PlainDeclCntnr.hpp  PlainDeclValue.hpp  PlainDefine.hpp  PropDef.hpp  Props.hpp  SelectInt.hpp  TupleTree.hpp  Util.hpp  XenumCntnrIterator.hpp  XenumValue.hpp
xenum/lib/inc/xenum4/: Xenum.hpp  XenumSet.hpp
xenum/lib/inc/xenum4/impl/: Cstring.hpp  CstringDeclCntnr.hpp  CstringDeclStore.hpp  CstringDeclValue.hpp  CstringDefine.hpp  Ctxt.hpp  Debug.hpp  Decl.hpp  DeclareCntnr.hpp  DeclareStore.hpp  DeclareValue.hpp  DefineCntnr.hpp  DefineStore.hpp  IndexNode.hpp  Main.hpp  Plain.hpp  PlainDeclCntnr.hpp  PlainDeclStore.hpp  Props.hpp  (+7 more)
xenum/lib/inc/xenum5/: Xenum.hpp  XenumSet.hpp
xenum/test/: CMakeLists.txt  doc.test.hpp
xenum/test/src/: TestCntnr.cpp  TestIcombs.cpp  TestP0combs.cpp  TestP1combs.cpp  TestP2combs.cpp  TestPcombs.cpp  TestS0combs.cpp  TestS1combs.cpp  TestS2combs.cpp  TestScombs.cpp  TestSstrs.cpp  TestValue.cpp  TestXenumSet.cpp  TestXenums.cpp
xenum/test/src/xenums/: FruitsInNsInCls.cpp  FruitsInNsNoCls.cpp  FruitsNoNsInCls.cpp  FruitsNoNsNoCls.cpp  Icmp.cpp  Icombs.cpp  Numbers.cpp  P0combs.cpp  P1combs.cpp  P2combs.cpp  Pcombs.cpp  S0combs.cpp  S1combs.cpp  S2combs.cpp  Scombs.cpp  Sstrs.cpp  Sstrs0.cpp  Sstrs1.cpp  Sstrs2.cpp
(+71 files in other folders)
